# dist_play

./: .gitignore  README.md  pyproject.toml  qsub.sh  qsub_ddp.sh  qsub_ray.sh  run_DDP.sh  run_dataparallel.sh  run_ray.sh
dist_play/: head_ip.py  master_ip.txt
networking/: master_ip.txt
qsubs/: DDP.qsub  DDP_one_node.qsub  DP.qsub  ray.qsub
tests/: main.py  main_DataParallel.py  main_ddp.py  main_ddp_one_node.py  main_ray.py
