[tool.poetry]
name = "dist-play"
version = "0.1.0"
description = ""
authors = ["Jeffrey Alido <jalido@bu.edu>"]
readme = "README.md"
packages = [{include = "dist_play"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.2.2" # problem with cudnn in 2.3.0. https://github.com/pytorch/pytorch/issues/121834
torchvision = "^0.17.2"
ray = {extras = ["train"], version = "^2.20.0"}
tensorboard = "^2.16.2"
wandb = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
